contrib/istio/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-api
  labels:
    app: echo-api
spec:
  ports:
  - port: 80
    targetPort: 9292
    name: http
  selector:
    app: echo-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo-api-v1
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: echo-api
        version: v1
    spec:
      containers:
      - name: echo-api
        image: quay.io/3scale/echoapi:stable
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9292
